k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-tls
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "eks.ztrax.com.br"
      # http:
      #   paths:
      #     - pathType: Prefix
      #       path: "/"
      #       backend:
      #         service:
      #           name: tracing-dev-service
      #           port:
      #             number: 3000
  tls:
    - hosts:
        - "eks.ztrax.com.br"
      secretName: letsencrypt-tls
